Implement input part and add initial settings

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.DS_Store*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -109,6 +110,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Idea project settings
+/.idea/
 
 # Spyder project settings
 .spyderproject
