Refactor the way of passing parameters, change enum class into tuple, change the naming convention of files

--- a/daily-dcs-conversion-tool/resources/config.yml
+++ b/daily-dcs-conversion-tool/resources/config.yml
@@ -1,2 +1,6 @@
 base_digit: 4  # example: 1000 = 4 digits
 output_separator: '\t'
+
+# define kinds of keywords
+keywords: d, f, t, u
+int_keywords: u
